--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0"
   },
   "name": "server",
   "version": "1.0.0",
@@ -16,8 +17,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon index.js",
-    "build" : "npm install"
+    "dev": "nodemon index.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
